# LightByLight2018

./: .gitignore  ConvertStarlightQEDtoLHE.C  README.md  countEvents.C
QEDnorm/: CMS_lumi.C  (+22 more)
analysis/: CMakeLists.txt  DumpEvent.C  DumpEvent.h  EleMu.cpp  EventTree.C  EventTree.h  TauTau_Input_List.txt  addPixelTrackInfo.cpp  applySelections.cpp  basicPlots_data_default.root  checkSignalLoss.cpp  drawEfficiencies.C  drawNtracks.C  drawShowerShape.C  efficienciesData.sub  efficienciesQED_MC.sub  gencode.sh  getDiphotonEfficiency.cpp  getEfficiencies.cpp  getEfficienciesData.cpp  getEfficienciesLbL.cpp  getEfficienciesQED.cpp  getEfficienciesQED_tnpEC.cpp  getLumiJson.C  getPhotonRecoIDEfficiencies.cpp  getRecoIDEfficienciesQED_MC.cpp  getScaleFactor.C  getTriggerEfficienciesQED.py  input_list.txt  input_list_castor_noBPTX.txt  input_list_old.txt  input_noise_ntuples.txt  input_qed_fsr.txt  makeQEDUnfoldingTrees  makeQEDUnfoldingTrees.cpp  makeUnfoldingTrees  makeUnfoldingTrees.cpp  prepareAcoplanarityPlots.cpp  prepareBasicPlots.cpp  prepareCaloPlots.cpp  (+26 more)
analysis/caloNoiseStudy/: CaloNoiseHelpers.h  condorConfig.sub  getCaloNoiseHistograms.cpp  getCaloNoiseThresholds.C  input_filelist.txt  run_calo_study.sh
analysis/condor/: PASSING.list  checkNevents.C  efficienciesQED_Data.sub  runAddPixelTrackInfo.sh  runAddPixelTrackInfo.sub  runApplySelections.sh  runApplySelections.sub  runCaloPlots.sh  runCaloPlots.sub  runCastorPlots.sh  runCastorPlots.sub  runEfficienciesQED.sh  runEfficienciesQED.sub  runEfficienciesQED_tnpEC.sh  runEfficienciesQED_tnpEC.sub  runEleMu.sh  runEleMu.sub  runElectronIDplots.sh  runElectronIDplots.sub  runEventList.sh  runEventList.sub  runPhotonIDplots.sh  runPhotonIDplots.sub  runPhotonRecoIDEfficiencies.sh  runPhotonRecoIDEfficiencies.sub  runPrepareBasicPlots.sh  runPrepareBasicPlots.sub  runQEDUnfoldingTrees.sh  runQEDUnfoldingTrees.sub  runSelectAnomalousEvents.sh  runSelectAnomalousEvents.sub  runSelectAnomalousEventsWCastor.sh  runSelectAnomalousEventsWCastor.sub  runSelectAnomalousEvents_qqbar.sh  runSelectAnomalousEvents_qqbar.sub  runSelectDiphotonEvents.sh  runSelectDiphotonEvents.sub  runSelectQEDEvents.sh  runSelectQEDEvents.sub  runTauTauApplySelection.sh  (+3 more)
analysis/configs/: applySelections.md  efficiencies.md  efficiencies_HFVeto_withEleIsolatioNewThresholds.md  efficiencies_HFVeto_withEleIsolatioNewThresholdsEta2p2.md  efficiencies_HFVeto_withEleIsolatioNewThresholdsEta2p2_photonIsolation0p035.md  efficiencies_eleNoIsolation.md  efficiencies_eleNoIsolation_newThresholds.md  efficiencies_eleNoIsolation_newThresholdsEta2p2.md  efficiencies_eleNoIsolation_newThresholdsEta2p2_JeremiChanges.md  efficiencies_eleNoIsolation_noCutOnPhoEtawidthButIetaIeta.md  efficiencies_eleNoIsolation_noCutOnPhoEtawidthButIetaIeta_CASTOR.md  efficiencies_eleNoIsolation_noCutOnPhoEtawidthButIetaIeta_newThresholds.md  efficiencies_newThresholds.md  preparePlots_100hits.md  preparePlots_150hits.md  preparePlots_200hits.md  preparePlots_300hits.md  preparePlots_50hits.md  preparePlots_EBnoise_1p0.md  preparePlots_EEnoiseEtaDep.md  preparePlots_EEnoiseEta_2p4.md  preparePlots_HF_20GeV.md  preparePlots_ZDCcoincidence.md  preparePlots_ZDCcut.md  preparePlots_default.md  preparePlots_diphoton+pt_0p8.md  preparePlots_looserCHE.md  preparePlots_looserHINPhotonHESigma.md  preparePlots_looserNEE.md  preparePlots_looserPhotonEt.md  preparePlots_looserPhotonHEbarrel.md  preparePlots_looserPhotonHEendcap.md  preparePlots_looserPhotonID.md  preparePlots_looserPhotonMass.md  preparePlots_looserPhotonSigmaBarrel.md  preparePlots_looserPhotonSigmaEndcap.md  preparePlots_looserPixelTracks.md  preparePlots_looserZDC.md  preparePlots_muchLooserCHE.md  preparePlots_muchLooserPixelTracks.md  (+23 more)
analysis/include/: ConfigManager.hpp  DumpEvent.hpp  Event.hpp  EventDisplay.hpp  EventProcessor.hpp  Helpers.hpp  Logger.hpp  PhysObject.hpp  PhysObjectProcessor.hpp
analysis/ntuples/: triggerSelect.C
analysis/plottingMacros/: CMS_lumi.C  CMS_lumi.h  MyCanvas.C  ReadGenTree.C  ReadMonoPhoTree.C  ReadMonoPhoTree.h  ReadQEDTree.C  ReadTree.h  Shower shape.ps  TnPEffDrawPhotonReco.C  TnPEffDraw_reco_nonAbsEta.C  addSFs_QEDMC.C  compareCuts.C  compareLowHighAco.C  compareLowHighAcoTrees.C  compareWithWithoutHFcheck.C  count_events_diphoton.C  drawAcoplanarity.C  drawBasicPlots.C  drawCaloPlots.C  drawCastorPlots.C  drawEfficiencies.C  drawEfficienciesLbL.C  drawEfficienciesQED.C  drawElectronIDplots.C  drawGenLevelPlots.C  drawLowMassDielectrons.C  drawNtracks.C  drawPhotonIDplots.C  drawShowerShape.C  drawSignalLoss.C  drawTriggerEfficiencyQED.C  drawZDCplots.C  fit_aco_hf_eff.C  getQEDcrossSection.C  plotQED_addUncertainty.C  plotQED_doReweighting_MC.C  plotQED_new.C  plotQED_stack_MC.C  plotStyle.h  (+8 more)
analysis/results/: acoplanarity.root  basicPlots.root  basicPlots_EBthresholdsUp.root  basicPlots_HEM.root  basicPlots_etaDepNEE.root  basicPlots_highEBthreshold.root  basicPlots_noEtaDep.root  basicPlots_withEtaDep.root  efficiencies.root  efficienciesData.root  efficienciesLbL.root  efficienciesQED.root  efficienciesQED_Data_noCuts.root  efficienciesQED_Data_noCuts_newProcedure.root  efficienciesQED_Data_noEtCut.root  efficienciesQED_Data_noEtaCut.root  efficienciesQED_Data_noHEbarrelCut.root  efficienciesQED_Data_noHEendcapCut.root  efficienciesQED_Data_noSigmaBarrelCut.root  efficienciesQED_Data_noSigmaEndcapCut.root  efficienciesQED_QED_SC.root  efficienciesQED_QED_SC_test.root  efficienciesQED_data.root  efficienciesQED_data_test.root  efficienciesQED_test.root  efficienciesQED_trigger.root  efficienciesQED_trigger_EG3.root  efficienciesQED_trigger_EG3_only.root  efficienciesQED_trigger_EG3_or_EG5.root  efficienciesQED_trigger_EG5.root  efficienciesQED_trigger_EG5_only.root  electronID.root  electronID_test.root  photonID.root  photonID_test.root  photonID_withAllCuts.root  photonID_withCuts.root  raw_plots_qed_sl.root  raw_plots_qed_sl_30M.root  showerShape.root  (+14 more)
analysis/src/: ConfigManager.cpp  DumpEvent.cpp  Event.cpp  EventProcessor.cpp  PhysObject.cpp  PhysObjectProcessor.cpp
(+724 files in other folders)
